# genjishimada

./: .dockerignore  .env.local.example  .gitignore  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile.api  Dockerfile.bot  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  index.html  justfile  lock.json  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  pyrightconfig.json  sitemap.xml
apps/api/: TESTING_README.md  app.py  conftest.py  pyproject.toml  pyrightconfig.json
apps/api/di/: __init__.py  auth.py  autocomplete.py  base.py  change_requests.py  community.py  completions.py  jobs.py  lootbox.py  map_edits.py  maps.py  newsfeed.py  notifications.py  playtests.py  rank_card.py  users.py
apps/api/events/: __init__.py  auth.py  completions.py  schemas.py
apps/api/html/: index.html
apps/api/middleware/: auth.py  guards.py
apps/api/migrations/: 0001_init.sql  0002_lootbox_contents.sql  0002_stadium_maps.sql  0003_stadium_maps_1.sql  0004_email_auth.sql  0005_api_keys_perms.sql  0006_refresh_tokens.sql  0007_notification_system.sql  0008_edit_requests.sql  0009_add_is_mod_column.sql  0010_data_table_inserted_at_and_speed_rules.sql  0011_map_tags.sql  0012_improve_speed_trigger_error.sql  0013_coin_store.sql  0014_quests_system.sql  0015_coin_store_rotation_history.sql  0016_new_lootbox_contents.sql  0017_fix_speed_trigger_check_verified.sql  0017_movement_techniques.sql  0018_movement_techniques.sql  0019_release_map_code.sql
apps/api/repository/: __init__.py  auth_repository.py  autocomplete_repository.py  base.py  change_requests_repository.py  community_repository.py  completions_repository.py  content_repository.py  exceptions.py  jobs_repository.py  lootbox_repository.py  maps_repository.py  newsfeed_repository.py  notifications_repository.py  playtest_repository.py  rank_card_repository.py  store_repository.py  tags_repository.py  users_repository.py  utilities_repository.py
apps/api/routes/: __init__.py  auth.py  change_requests.py  community.py  completions.py  jobs.py  lootbox.py  newsfeed.py  notifications.py  rank_card.py  tags.py  users.py  utilities.py
apps/api/routes/maps/: __init__.py  base.py  edits.py  playtest.py
apps/api/routes/v3/: __init__.py  auth.py  autocomplete.py  community.py  completions.py  content.py  jobs.py  lootbox.py  map_edits.py  maps.py  newsfeed.py  notifications.py  playtest.py  rank_card.py  store.py  tags.py  users.py
apps/api/routes_new/v4/: __init__.py  auth.py  change_requests.py  community.py  completions.py  lootbox.py  map_edits.py  maps.py  newsfeed.py  (+5 more)
apps/api/seeds/: 0001-init_seed.sql  0002-auth_seed.sql  0003-completions_seed.sql  0004-notifications_seed.sql  0005-newsfeed_seed.sql  0006-change_requests_seed.sql  0007-playtests_seed.sql  0008-map_edits_seed.sql  0010-jobs_seed.sql  0011-community_seed.sql  0012-map_creators_seed.sql  0013-notifications_preferences_seed.sql  0014-playtests_map_difficulty_seed.sql  0015-ratings_verified_seed.sql  0016-ratings_min_quality_seed.sql  0017-map_search_filters_seed.sql  0018-pending_verification_handling_seed.sql  0019-map_tags_seed.sql
apps/api/services/: __init__.py  auth_service.py  base.py  change_requests_service.py  community_service.py  completions_service.py  content_service.py  image_storage_service.py  lootbox_service.py  maps_service.py  newsfeed_service.py  notifications_service.py  playtest_service.py  rank_card_service.py  store_service.py  tags_service.py  users_service.py  utilities_service.py
apps/api/test_v4/: conftest.py
apps/api/tests/: __init__.py  conftest.py  test_conftest.py
apps/api/utilities/: errors.py  jobs.py  map_search.py  playtest_plot.py  shared_queries.py
apps/bot/: main.py  pyproject.toml
apps/bot/configs/: dev.toml
apps/bot/core/: genji.py  mentionable_tree.py
apps/bot/docs/: index.md
apps/bot/extensions/: __init__.py  _queue_registry.py  api_service.py  change_requests.py  completions.py  events.py  housekeeping.py  information_pages.py  map_editor.py  map_search.py  map_submission.py  moderator.py  newsfeed.py  notifications.py  playtest.py  rabbit.py  settings.py  video_thumbnail.py  xp.py
apps/bot/utilities/: __init__.py  _types.py  base.py  change_requests.py  completions.py  config.py  emojis.py  errors.py  extra.py  formatter.py  maps.py  paginator.py  transformers.py
docs/: CNAME  index.md  movement-techniques-api.md  openapi.json  pyproject.toml
docs/api/: architecture.md  authentication.md  deployment.md  index.md  local-development.md  openapi.md
docs/architecture/: controller-service-repository-pattern.md
docs/bot/: index.md
docs/bot/architecture/: core-bot.md  messaging.md  services.md
docs/bot/operations/: configuration.md
docs/bot/ux/: map-search-sqlspec.md  newsfeed-and-embeds.md
docs/contributing/: documentation.md  index.md  workflow.md
docs/domain/: index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/operations/: backups.md  cloudflare.md  docker-compose.md  identity-and-auth.md  index.md  infrastructure.md  monitoring.md  reverse-proxy.md
docs/sdk/: data-models.md  index.md  usage.md
docs/sdk/reference/: auth.md  change-requests.md  completions.md  difficulties.md  index.md  internal.md  logs.md  lootbox.md  maps.md  newsfeed.md  notifications.md  rank-card.md  tags.md  users.md  xp.md
docs/services/: api.md  bot.md  database.md  index.md  ocr.md  rabbitmq.md  translate.md
docs/stylesheets/: extra.css
docs/web/: backend.md  deployment.md  frontend.md  index.md  integrations.md  localization.md  repository-layout.md  runtime-container.md  security-and-sessions.md
libs/sdk/: pyproject.toml
(+332 files in other folders)
