[project]
name = "genjishimada-docs"
version = "0.1.0"
description = "Documentation for Genji Shimada"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material[imaging]>=9.7.0,<9.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocstrings[python]>=0.29.0",
    "pygments>=2.18.0",
]

[dependency-groups]
dev = [
    "mkdocs-minify-plugin>=0.8.0",
]
