[project]
name = "genjishimada-bot"
version = "0.1.0"
description = "Genji Shimada, a Discord bot for the Genji Parkour community."
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "asyncpg>=0.30.0",
    "discord-ext-menus",
    "discord-py",
    "genjishimada-sdk",
    "jishaku>=2.6.0",
    "sentry-sdk>=2.29.1",
    "truststore>=0.10.4",
    "msgspec>=0.19.0",
]

[dependency-groups]
dev-bot = [
    "mkdocs>=1.6.0",
    "mkdocs-shadcn>=0.9.7",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/rapptz/discord.py", rev = "master" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus" }
