[project]
name = "genjishimada-sdk"
version = "0.1.0"
description = "A shared library for Genji Shimada services."
readme = "README.md"
authors = [
    { name = "tylovejoy", email = "48333668+tylovejoy@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
]
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
